--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,22 @@
 /* Colores */
 
 /* ******************************** */
+
+.avatar {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.avatar__imagen {
+  width: 400px;
+  height: 400px;
+  border-radius: 100%;
+  padding: 0 10px;
+}
+
+span {
+  font-weight: bold;
+}
